--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -5,64 +5,66 @@
     android:id="@+id/googleDrawer"
     android:background="@color/white">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="168dp"
+        android:layout_height="160dp"
         android:background="@color/grey"
         android:id="@+id/navigationHeader"
         android:paddingTop="24dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_gravity="center_vertical"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:id="@+id/imgAvatar"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
             app:border_width="3dp"
             app:border_color="#FFFFFF"/>
 
 
 
 
-        <LinearLayout android:orientation="vertical"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:layout_toRightOf="@+id/imgAvatar"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/imgAvatar"
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginBottom="8dp">
+            android:gravity="center_vertical"
+            >
 
             <Model.CustomTextView
-                style="@style/OpenSansRegular"
+                style="@style/OpenSansSemiBold"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:id="@+id/txtUsername"
                 android:layout_weight="1"
-                android:textSize="14sp"
-                android:textStyle="bold"
+                android:textSize="16sp"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:gravity="center_vertical"
+                />
 
             <Model.CustomTextView
                 style="@style/OpenSansRegular"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:id="@+id/txtUserEmail"
+                android:textSize="12sp"
                 android:layout_weight="1"
                 android:singleLine="true"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:gravity="center_vertical"
+                />
         </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
     <View android:layout_width="match_parent"
         android:background="#1f000000"
@@ -79,7 +81,6 @@
         android:layout_height="wrap_content"
         android:background="@color/myDrawerBackground"
         android:layout_below="@+id/separator"
-        android:layout_marginBottom="8dp"
         android:layout_above="@+id/navigationfooter"
         />
 
@@ -87,11 +88,10 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:background="@drawable/feedback_btn_click_effect"
         android:id="@+id/navigationfooter"
         android:layout_alignParentBottom="true"
-        android:gravity="center_horizontal"
         android:focusable="true"
         android:clickable="true"
         >
@@ -100,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_contact_us"
+                android:layout_marginLeft="16dp"
                 android:layout_gravity="center_vertical"
 
                 />
@@ -107,14 +108,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/drawer_feedback_text"
-                android:text="FEEDBACK"
-                android:textSize="16dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
+                android:text="Feedback"
                 android:textColor="@color/white"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="16dp"
+                style="@style/OpenSansRegular"
                 android:layout_gravity="center_vertical"
-                style="@style/OpenSansLight"
 
                 />
     </LinearLayout>
