--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -16,7 +16,9 @@
     <color name="blue_fab_primary">#33b5e5</color>
     <color name="blue_fab_primary_dark">#1193C3</color>
     <color name="cokered_trans">#80f40000</color>
+    <color name="grey_trans">#665e5e5e</color>
     <color name="grey">#5e5e5e</color>
+
     <color name="myAccentColor">#FF4081</color>
     <color name="myDrawerBackground">#FFF</color>
     <color name="myWindowBackground">#FFF</color>
@@ -25,8 +27,11 @@
     <color name="lightgrey_chat">#5e5e5e</color>
     <color name="green">#32B141</color>
     <color name="dark_primary_color">#388E3C</color>
+    <color name="color_background_gray">#F2F2F2</color>
 
-    <color name="text_color">#565656</color>
+    <color name="text_color">#B8B8B8</color>
+    <color name="text_color_dark">#565656</color>
+    <color name="favorite_background">#69645e</color>
     <drawable name="pressed_gray">#0c000000</drawable>
     <drawable name="selected_gray">#2c000000</drawable>
 
