--- a/app/src/main/res/layout/activity_single_listing_view.xml
+++ b/app/src/main/res/layout/activity_single_listing_view.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_background_gray"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -204,6 +205,8 @@
             android:id="@+id/single_listing_main_layout"
             layout="@layout/single_listing_main_layout">
         </include>
+
+
 
     </ScrollView>
 
