--- a/app/src/main/res/layout/fragment_marketplace.xml
+++ b/app/src/main/res/layout/fragment_marketplace.xml
@@ -1,18 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkwhite"
     >
 
-    <LinearLayout
-        android:id="@+id/recylcerview_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-
-    >
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/activity_main_swipe_refresh_layout"
@@ -21,19 +14,40 @@
 
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recylcer_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recylcer_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+
 
             />
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
-    </LinearLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/activity_main_swipe_refresh_layout_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <Model.CustomTextView
+                android:id="@+id/recylcer_emptyView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                style="@style/OpenSansRegular"
+                android:text="Getting Data...."
+                android:gravity="center"
+
+                />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
     <com.melnykov.fab.FloatingActionButton
@@ -60,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/recylcerview_layout"
+        android:layout_alignParentTop="true"
         />
 
 </RelativeLayout>
