--- a/app/src/main/res/layout/list_item_my_items.xml
+++ b/app/src/main/res/layout/list_item_my_items.xml
@@ -2,16 +2,13 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/profile_feedback_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@color/white"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardUseCompatPadding="true"
-    android:layout_marginTop="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
+    card_view:cardCornerRadius="0dp"
+    card_view:cardUseCompatPadding="false"
+    card_view:cardElevation="0dp"
     >
 
     <LinearLayout
