--- a/app/src/main/res/layout/navigation_drawer_row.xml
+++ b/app/src/main/res/layout/navigation_drawer_row.xml
@@ -1,5 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="48dp" android:layout_width="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="48dp"
+    android:layout_width="match_parent">
 
     <Model.CustomTextView
         android:id="@+id/item_name"
