--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,7 +39,7 @@
         <style name="AppCompatAlertDialogStyleFeedback" parent="Theme.AppCompat.Light.Dialog.Alert">
             <item name="colorAccent">@color/ColorPrimary</item>
             <item name="android:textColorPrimary">@color/black</item>
-            <item name="android:background">@color/white</item>
+            <item name="android:background">@color/color_background_gray</item>
             <item name="android:radius">8dp</item>
         </style>
 
@@ -49,7 +49,7 @@
             <item name="colorPrimaryDark">@color/grey</item>
             <item name="android:windowAnimationStyle">@null</item>
             <item name="android:screenOrientation">portrait</item>
-            <item name="android:statusBarColor">@android:color/black</item>
+            <item name="android:statusBarColor">@color/black</item>
 
 
         </style>
