--- a/app/src/main/res/layout/fragment_marketplace.xml
+++ b/app/src/main/res/layout/fragment_marketplace.xml
@@ -14,6 +14,16 @@
 
 
 
+            <com.etsy.android.grid.StaggeredGridView
+                android:id="@+id/recylcer_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                app:column_count="2"
+                app:item_margin="8dp"
+                />
+
+            <!--
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recylcer_view"
                 android:layout_width="match_parent"
@@ -24,6 +34,7 @@
 
 
             />
+            -->
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
