Update: - bugs fixed in MarketPlace listing.

--- a/app/src/main/res/layout/list_item_offer_process.xml
+++ b/app/src/main/res/layout/list_item_offer_process.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardUseCompatPadding="true" >
+    card_view:cardCornerRadius="0dp"
+    card_view:cardUseCompatPadding="false"
+    card_view:cardElevation="0dp"
+    >
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
