--- a/app/src/main/res/drawable/circle_white.xml
+++ b/app/src/main/res/drawable/circle_white.xml
@@ -2,12 +2,14 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
-
     >
 
     <solid
-        android:color="@color/ColorPrimary"
+        android:color="@color/white" />
 
+    <stroke
+        android:width="2dp"
+        android:color="@color/text_color"
         />
 
 
