--- a/app/src/main/res/layout/list_item_staggered.xml
+++ b/app/src/main/res/layout/list_item_staggered.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,16 +22,14 @@
             android:background="?android:attr/selectableItemBackground"
             >
 
-            <com.android.volley.toolbox.NetworkImageView
-
+            <ImageView
                 android:id="@+id/item_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_alignParentTop="true"
-                android:src="@drawable/sample_img3"
-                android:layout_centerHorizontal="true"
                 android:adjustViewBounds="true"
+                android:layout_centerHorizontal="true"
             />
 
 
@@ -151,6 +150,85 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 >
+
+                <Model.CustomTextView
+                    android:id="@+id/marketplace_tag1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="@color/white"
+                    android:clickable="true"
+                    android:padding="4dp"
+                    android:background="@drawable/tag_btn_shape"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="8dp"
+                    style="@style/OpenSansLight"
+                    android:visibility="gone"
+                    />
+
+                <Model.CustomTextView
+                    android:id="@+id/marketplace_tag2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="@color/white"
+                    android:clickable="true"
+                    android:padding="4dp"
+                    android:background="@drawable/tag_btn_shape"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="8dp"
+                    style="@style/OpenSansLight"
+                    android:visibility="gone"
+
+                    />
+
+                <Model.CustomTextView
+                    android:id="@+id/marketplace_tag3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="@color/white"
+                    android:clickable="true"
+                    android:padding="4dp"
+                    android:background="@drawable/tag_btn_shape"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="8dp"
+                    style="@style/OpenSansLight"
+                    android:visibility="gone"
+
+                    />
+
+                <Model.CustomTextView
+                    android:id="@+id/marketplace_tag4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="@color/white"
+                    android:clickable="true"
+                    android:padding="4dp"
+                    android:background="@drawable/tag_btn_shape"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="8dp"
+                    style="@style/OpenSansLight"
+                    android:visibility="gone"
+
+                    />
+
+                <Model.CustomTextView
+                    android:id="@+id/marketplace_tag5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp"
+                    android:textColor="@color/white"
+                    android:clickable="true"
+                    android:padding="4dp"
+                    android:background="@drawable/tag_btn_shape"
+                    android:layout_marginRight="4dp"
+                    android:layout_marginBottom="8dp"
+                    style="@style/OpenSansLight"
+                    android:visibility="gone"
+
+                    />
 
             </org.apmem.tools.layouts.FlowLayout>
 
